bk_ida/gccida/c3/precompute_arguments
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/precompute_arguments/src/calls.c:1963:48: error: use of undeclared identifier 'machine_mode'
args[i].value = convert_modes( args[i].mode, ( machine_mode)mode, args[i].value, args[i].unsignedp); 
                                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/precompute_arguments/src/obj/calls.o] Error 1
